--- a/package.json
+++ b/package.json
@@ -12,5 +12,16 @@
   },
   "author": "",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/jscheffner/hdm-alexa-skill#readme"
+  "homepage": "https://bitbucket.org/jscheffner/hdm-alexa-skill#readme",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.1.2",
+    "nock": "^9.0.2",
+    "rewire": "^2.5.2",
+    "sinon": "^1.17.6"
+  },
+  "dependencies": {
+    "hdm-client": "^1.0.1",
+    "moment": "^2.15.2"
+  }
 }
