--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "xunit-test": "mocha --recursive -R xunit test/"
   },
   "repository": {
     "type": "git",
