--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "sinon": "^1.17.6"
   },
   "dependencies": {
-    "alexa-response": "^4.0.3",
+    "alexa-response": "git+ssh//git@bitbucket.org:jscheffner/hdm-node-client.git#master",
     "hdm-client": "^1.0.1",
     "moment": "^2.15.2"
   }
