--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha test/unit/",
     "xunit-test": "mocha --recursive -R xunit test/ > test-reports.xml",
     "lint": "jshint lib test index.js",
     "jscs": "jscs lib test index.js",
