--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "alexa-response": "^4.0.3",
-    "hdm-client": "https://jscheffner@bitbucket.org/jscheffner/hdm-node-client.git",
+    "hdm-client": "~1.1.0",
     "moment": "^2.15.2"
   }
 }
