--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "alexa-response": "^4.0.3",
     "hdm-client": "~1.1.0",
-    "moment": "^2.15.2"
+    "moment": "^2.15.2",
+    "underscore": "^1.8.3"
   }
 }
