--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/jscheffner/hdm-alexa-skill#readme",
   "devDependencies": {
+    "alexa-skills-kit-client": "0.0.1",
     "chai": "^3.5.0",
     "jscs": "^3.0.7",
     "jshint": "^2.9.4",
