--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha test/unit/",
+    "test-coverage" : "istanbul cover  node_modules/.bin/_mocha -- -R spec test/unit/",
     "xunit-test": "mocha --recursive -R xunit test/ > test-reports.xml",
     "lint": "jshint lib test index.js",
     "jscs": "jscs lib test index.js",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "alexa-skills-kit-client": "0.0.1",
     "chai": "^3.5.0",
+    "istanbul": "^0.4.5",
     "jscs": "^3.0.7",
     "jshint": "^2.9.4",
     "mocha": "^3.1.2",
